<resources>
    <string name="app_name">SD2THESIS</string>
    <string name="sign">_</string>
    <string name="btn_forgot_pass">Forgot Password?</string>
    <string name="no_acc">Doesn<b>\'</b>t have an account? <b>Sign up</b> here</string>
    <string name="have_acc">Already have an account? <b>Login</b> here</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_given_name">Given Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_bday">Date of Birth</string>
    <string name="hint_grade_level">Grade Level</string>
    <string name="hint_school_organization">School/Organization</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_security_answer">Your Answer</string>
    <string name="create_account">Create Account</string>
    <string name="dash_name"><b>Name:</b></string>
    <string name="dash_age"><b>Age:</b></string>
    <string name="dash_grade_level"><b>Grade Level:</b></string>
    <string name="dash_school_org"><b>School/Org:</b></string>
    <string name="download">_</string>
    <string name="searched_word">SEARCHED WORD</string>
    <string name="searched_synonyms_here">Searched Synonyms here</string>
    <string name="searched_wordd">SEARCHED WORD</string>
    <string name="searched_meaning_here">Searched Meaning here</string>
    <string name="btn_current_text">Current Text</string>
    <string name="btn_corrected_text">Corrected Text</string>
    <string name="btn_return">Return</string>
    <string name="spell_checker">Spell Checker</string>
    <string name="check">check</string>
    <string name="grammar_title">Grammar Checker</string>
    <string name="sentence">sentence</string>
    <string name="sentence_pattern">sentence pattern</string>
    <string name="suggested_pattern">suggested pattern</string>
    <string name="suggested_sentence">suggested sentence</string>
    <string name="get_started">Get Started</string>
    <string name="mabuhay">Mabuhay!</string>

</resources>